--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -198,7 +198,7 @@
         </div>
       </div>
       <div class="card-body pt-4">
-        <div id="preview"></div>
+        <div id="preview" class="form-preview"></div>
       </div>
     </div>
   </div>
