--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -43,6 +43,10 @@
                     class="text-start">Dropdown</span></button></div>
               <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
+                  data-type="multipleSelect"><i class="icon-base ti tabler-select-all icon-sm me-2"></i><span
+                    class="text-start">Multiple Select</span></button></div>
+              <div class="col-6 d-flex"><button type="button"
+                  class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
                   data-type="multipleChoice"><i class="icon-base ti tabler-list-check icon-sm me-2"></i><span
                     class="text-start">Multi-choice</span></button></div>
               <div class="col-6 d-flex"><button type="button"
@@ -73,27 +77,19 @@
               <!-- Additional field types -->
               <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
-                  data-type="date"><i class="icon-base ti tabler-calendar icon-sm me-2"></i><span
+                  data-type="datePicker"><i class="icon-base ti tabler-calendar icon-sm me-2"></i><span
                     class="text-start">Date</span></button></div>
               <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
-                  data-type="time"><i class="icon-base ti tabler-clock icon-sm me-2"></i><span
+                  data-type="timePicker"><i class="icon-base ti tabler-clock icon-sm me-2"></i><span
                     class="text-start">Time</span></button></div>
               <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
-                  data-type="datetime"><i class="icon-base ti tabler-calendar-time icon-sm me-2"></i><span
+                  data-type="datetimePicker"><i class="icon-base ti tabler-calendar-time icon-sm me-2"></i><span
                     class="text-start">Datetime</span></button></div>
               <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
-                  data-type="month"><i class="icon-base ti tabler-calendar-stats icon-sm me-2"></i><span
-                    class="text-start">Month</span></button></div>
-              <div class="col-6 d-flex"><button type="button"
-                  class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
-                  data-type="week"><i class="icon-base ti tabler-calendar-week icon-sm me-2"></i><span
-                    class="text-start">Week</span></button></div>
-              <div class="col-6 d-flex"><button type="button"
-                  class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
-                  data-type="color"><i class="icon-base ti tabler-color-swatch icon-sm me-2"></i><span
+                  data-type="colorPicker"><i class="icon-base ti tabler-color-swatch icon-sm me-2"></i><span
                     class="text-start">Color</span></button></div>
               <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
@@ -102,11 +98,11 @@
               <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
                   data-type="file"><i class="icon-base ti tabler-file-upload icon-sm me-2"></i><span
-                    class="text-start">File Upload</span></button></div>
-              <div class="col-12 d-flex"><button type="button"
+                    class="text-start">Multiple File Upload</span></button></div>
+              <div class="col-6 d-flex"><button type="button"
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
-                  data-type="range"><i class="icon-base ti tabler-adjustments-horizontal icon-sm me-2"></i><span
-                    class="text-start">Range</span></button></div>
+                  data-type="rangePicker"><i class="icon-base ti tabler-adjustments-horizontal icon-sm me-2"></i><span
+                    class="text-start">Date Range</span></button></div>
             </div>
           </div>
 
@@ -219,6 +215,18 @@
 {{#section 'head'}}
 <!-- Quill Rich Text Editor CSS -->
 <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
+
+<!-- Picker Libraries CSS -->
+<link rel="stylesheet" href="/assets/vendor/libs/flatpickr/flatpickr.css" />
+<link rel="stylesheet" href="/assets/vendor/libs/bootstrap-daterangepicker/bootstrap-daterangepicker.css" />
+<link rel="stylesheet" href="/assets/vendor/libs/jquery-timepicker/jquery-timepicker.css" />
+<link rel="stylesheet" href="/assets/vendor/libs/pickr/pickr-themes.css" />
+
+<!-- Dropzone CSS -->
+<link rel="stylesheet" href="/assets/vendor/libs/dropzone/dropzone.css" />
+
+<!-- Select2 CSS -->
+<link rel="stylesheet" href="/assets/vendor/libs/select2/select2.css" />
 {{/section}}
 
 {{#section 'scripts'}}
@@ -243,6 +251,22 @@
   // Enable modular Builder boot
   window.BUILDER_USE_MODULAR = true;
 </script>
+
+<!-- Picker Libraries JS -->
+<script src="/assets/vendor/libs/moment/moment.js"></script>
+<script src="/assets/vendor/libs/flatpickr/flatpickr.js"></script>
+<script src="/assets/vendor/libs/bootstrap-daterangepicker/bootstrap-daterangepicker.js"></script>
+<script src="/assets/vendor/libs/jquery-timepicker/jquery-timepicker.js"></script>
+<script src="/assets/vendor/libs/pickr/pickr.js"></script>
+
+<!-- Dropzone JS -->
+<script src="/assets/vendor/libs/dropzone/dropzone.js"></script>
+
+<!-- jQuery (required for Select2) -->
+<script src="/assets/vendor/libs/jquery/jquery.js"></script>
+
+<!-- Select2 JS -->
+<script src="/assets/vendor/libs/select2/select2.js"></script>
 
 <!-- Quill Rich Text Editor JS -->
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
