--- a/views/partials/fields/checkboxes.hbs
+++ b/views/partials/fields/checkboxes.hbs
@@ -1,11 +1,11 @@
-<div class="mb-3">
+<div class="mb-4">
   <label class="form-label d-block">
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
   {{#each options}}
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" name="{{../name}}" id="{{../name}}_{{@index}}" value="{{this}}">
-      <label class="form-check-label" for="{{../name}}_{{@index}}">{{this}}</label>
-    </div>
+  <div class="form-check{{#if @first}} mt-4{{else}} mb-2{{/if}}">
+    <input class="form-check-input" type="checkbox" name="{{../name}}" id="{{../name}}_{{@index}}" value="{{this}}">
+    <label class="form-check-label" for="{{../name}}_{{@index}}">{{this}}</label>
+  </div>
   {{/each}}
 </div>
