--- a/views/partials/fields/name.hbs
+++ b/views/partials/fields/name.hbs
@@ -1,13 +1,15 @@
-<div class="mb-3">
+<div class="mb-4">
   <label class="form-label">
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
   <div class="row g-2">
-    <div class="col-12 col-md-6">
-      <input class="form-control" type="text" name="{{name}}_first" placeholder="First name" {{#if required}}required{{/if}}>
+    <div class="col-12 col-md-6 mt-4">
+      <input class="form-control" type="text" name="{{name}}_first" placeholder="First name" {{#if
+        required}}required{{/if}}>
     </div>
     <div class="col-12 col-md-6">
-      <input class="form-control" type="text" name="{{name}}_last" placeholder="Last name" {{#if required}}required{{/if}}>
+      <input class="form-control" type="text" name="{{name}}_last" placeholder="Last name" {{#if
+        required}}required{{/if}}>
     </div>
   </div>
 </div>
