--- a/views/partials/fields/number.hbs
+++ b/views/partials/fields/number.hbs
@@ -1,6 +1,7 @@
-<div class="mb-3">
+<div class="mb-4">
   <label class="form-label">
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
-  <input class="form-control" type="number" name="{{name}}" placeholder="{{placeholder}}" {{#if required}}required{{/if}}>
+  <input class="form-control" type="number" name="{{name}}" placeholder="{{placeholder}}" {{#if
+    required}}required{{/if}}>
 </div>
