--- a/views/partials/fields/phone.hbs
+++ b/views/partials/fields/phone.hbs
@@ -1,11 +1,8 @@
-<div class="mb-3">
+<div class="mb-4">
   <label class="form-label">
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
   <!-- added js-intl-tel class -->
-  <input class="form-control js-intl-tel"
-         type="tel"
-         name="{{name}}"
-         placeholder="{{placeholder}}"
-         {{#if required}}required{{/if}}>
+  <input class="form-control js-intl-tel" type="tel" name="{{name}}" placeholder="{{placeholder}}" {{#if
+    required}}required{{/if}}>
 </div>
