--- a/views/partials/fields/textarea.hbs
+++ b/views/partials/fields/textarea.hbs
@@ -1,6 +1,7 @@
-<div class="mb-3">
+<div class="mb-4">
   <label class="form-label">
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
-  <textarea class="form-control" name="{{name}}" rows="4" placeholder="{{placeholder}}" {{#if required}}required{{/if}}></textarea>
+  <textarea class="form-control" name="{{name}}" rows="4" placeholder="{{placeholder}}" {{#if
+    required}}required{{/if}}></textarea>
 </div>
