--- a/views/partials/fields/color-picker.hbs
+++ b/views/partials/fields/color-picker.hbs
@@ -1,10 +1,4 @@
-<div class="mb-4">
-    <label class="form-label">
-        {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
-    </label>
-    <div class="d-flex align-items-center gap-2">
-        <div class="color-picker-widget p-1 border rounded" style="cursor: pointer;"></div>
-        <input class="form-control color-input flex-grow-1" type="text" name="{{name}}" placeholder="{{placeholder}}"
-            {{#if required}}required{{/if}} readonly>
-    </div>
-</div>
+<label class="form-label">
+    {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
+</label>
+<div class="color-picker-widget p-1 border rounded mt-4" style="cursor: pointer;"></div>
